# HoverRaceAI

./: .copilot-instructions.md  .gitignore  ACTOR_RENDERING_CHANGELOG.md  ACTOR_RENDERING_COMPLETE.md  ACTOR_RENDERING_FIX.md  ACTOR_RENDERING_IMPLEMENTATION.md  ACTOR_RENDERING_INDEX.md  ACTOR_RENDERING_PROPER_SOLUTION.md  ACTOR_RENDERING_QUICK_REF.md  ACTOR_RENDERING_VERIFICATION.md  ACTOR_RENDERING_VISUAL_SUMMARY.md  AUDIO_FIX_COMPLETE.md  AUDIO_FIX_STEPS.md  AUDIO_SILENCE_ROOT_CAUSE.md  BUFFER_OVERFLOW_FIX.md  BUFFER_OVERFLOW_QUICK_FIX.md  BUFFER_OVERFLOW_ROOT_CAUSE_AND_FIX.md  BUILD_COMPLETION_REPORT.md  BUILD_GRAPHICS_ENGINE_REPORT.txt  BUILD_INSTRUCTIONS.md  BUILD_PHASE_STATUS.md  BUILD_REPORT.md  BUILD_REPORT_FINAL.md  CENTRALIZED_SERVER_IMPLEMENTATION.md  CODE_CHANGES_VERIFICATION.md  COMMUNICATION_TIMEOUT_ANALYSIS.md  COMMUNICATION_TIMEOUT_FIX_COMPLETE.md  COMPLETE_PROJECT_DELIVERY_REPORT.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  COPILOT_RULES_OBJFAC1.md  CRITICAL_BUG_FIX_REPORT.md  CURRENT_STATUS.md  ColorTools_clean.vcxproj  DEBUG_LOGGING_REMOVAL_COMPLETE.md  DELIVERABLES.md  DEPLOY_ColorTools.vcxproj  DEPLOY_MainCharacter.vcxproj  DEPLOY_Model.vcxproj  DEPLOY_ObjFacTools.vcxproj  (+166 more)
NetTarget/RaceServer/: BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  README.md  RaceServer.cpp  RaceServer.vcxproj  config.xml  stdafx.cpp  stdafx.h
NetTarget/RaceServer/Config/: ServerConfig.cpp  ServerConfig.h
NetTarget/RaceServer/GameSimulation/: GameSimulation.cpp  GameSimulation.h  GameState.h
NetTarget/RaceServer/Logging/: ServerLogger.cpp  ServerLogger.h
(+536 files in other folders)
